# pricklies-trip

./: .cocos-project.json  .gitignore  .travis.yml  CMakeLists.txt  README.md  install-cocos2d-x.sh
Classes/: AppDelegate.cpp  AppDelegate.h  BackGround.cpp  BackGround.h  BackGroundController.cpp  BackGroundController.h  Background.cpp  Background.h  BackgroundController.cpp  BackgroundController.h  Creature.cpp  Creature.h  CreatureRespawner.cpp  CreatureRespawner.h  Enemy.cpp  Enemy.h  Events.h  GameScene.cpp  GameScene.h  Goodie.cpp  Goodie.h  HelloWorldScene.cpp  HelloWorldScene.h  Hero.cpp  Hero.h  HeroState.cpp  HeroState.h  Image.h  Input.h  Respawner.cpp  Respawner.h  Score.cpp  Score.h  ScreenConsts.h  Tag.h
Tests/: CMakeLists.txt  Score.test.cpp  example.cpp
proj.ios_mac/PT.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
